# Simple-Chat-Agent-Server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  test.py
ai/: __init__.py  agent.py  graph.py  state.py
ai/chat/: agent.py
ai/chat/tools/: ip_info.py  web_search.py
ai/news/: agent.py
ai/news/tools/: rss_feed.py
ai/router/: agent.py
ai/summary/: agent.py
tests/: test_rss_feed.py
